<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_activity_iv_diaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/diaper_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_diaper_icon" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/main_activity_rb_dry"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_iv_diaper"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/main_activity_rb_dirty"
            style="@style/font_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_dirty_text" />

        <RadioButton
            android:id="@+id/main_activity_rb_wet"
            style="@style/font_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_wet_text" />

        <RadioButton
            android:id="@+id/main_activity_rb_dry"
            style="@style/font_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_dry_text" />
    </RadioGroup>

    <EditText
        android:id="@+id/main_activity_et_time"
        style="@style/font_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/time_hint_text"
        android:inputType="time"
        android:textColorHint="@color/black_coral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/main_activity_bt_add"
        style="@style/font_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/melon"
        android:text="@string/button_add_text"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_bt_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_et_time"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/main_activity_bt_clear"
        style="@style/font_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/melon"
        android:text="@string/button_clear_text"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_bt_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_bt_add"
        app:layout_constraintTop_toTopOf="@+id/main_activity_bt_add" />

    <TextView
        android:id="@+id/main_activity_tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:textAppearance="@style/font_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_bt_add"
        app:layout_constraintVertical_bias="0.01999998" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tv_diaper_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_header"
        app:layout_constraintVertical_bias="0.49">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_activity_iv_baby1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/baby_description"
                app:srcCompat="@drawable/ic_baby_icon" />

            <TextView
                android:id="@+id/main_activity_tv_diaper_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_diaper_changes"
                android:textAlignment="center"
                android:textAppearance="@style/font_style"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/main_activity_iv_baby2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/baby_description"
                app:srcCompat="@drawable/ic_baby_icon" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/main_activity_tv_diaper_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_diaper_count_text"
        android:textAppearance="@style/font_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>